// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Another test 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "GetBooksByAuthorName",
      "params": Array [
        Object {
          "codeRefs": Object {
            "used": Array [
              Object {
                "a": 161,
                "b": 170,
                "col": 48,
                "line": 5,
              },
            ],
          },
          "name": "authorName",
          "transform": Object {
            "type": "scalar",
          },
        },
      ],
      "statement": Object {
        "body": "SELECT b.* FROM books b
    INNER JOIN authors a ON a.id = b.author_id
    WHERE a.first_name || ' ' || a.last_name = :authorName",
        "loc": Object {
          "a": 42,
          "b": 170,
          "col": 4,
          "line": 3,
        },
      },
      "usedParamSet": Object {
        "authorName": true,
      },
    },
  ],
}
`;

exports[`Double and single quotes are supported 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "GetAllUsers",
      "params": Array [],
      "statement": Object {
        "body": "SELECT u.\\"rank\\" FROM users u where name = 'some-name'",
        "loc": Object {
          "a": 29,
          "b": 81,
          "col": 2,
          "line": 3,
        },
      },
      "usedParamSet": Object {},
    },
  ],
}
`;

exports[`Ignore inline comments in queries 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "UpdateBooks",
      "params": Array [
        Object {
          "codeRefs": Object {
            "used": Array [
              Object {
                "a": 80,
                "b": 83,
                "col": 14,
                "line": 5,
              },
            ],
          },
          "name": "name",
          "transform": Object {
            "type": "scalar",
          },
        },
        Object {
          "codeRefs": Object {
            "used": Array [
              Object {
                "a": 94,
                "b": 97,
                "col": 28,
                "line": 5,
              },
            ],
          },
          "name": "rank",
          "transform": Object {
            "type": "scalar",
          },
        },
        Object {
          "codeRefs": Object {
            "used": Array [
              Object {
                "a": 111,
                "b": 112,
                "col": 45,
                "line": 5,
              },
            ],
          },
          "name": "id",
          "transform": Object {
            "type": "scalar",
          },
        },
      ],
      "statement": Object {
        "body": "UPDATE books
                       
  SET name = :name, rank = :rank WHERE id = :id",
        "loc": Object {
          "a": 29,
          "b": 112,
          "col": 2,
          "line": 3,
        },
      },
      "usedParamSet": Object {
        "id": true,
        "name": true,
        "rank": true,
      },
    },
  ],
}
`;

exports[`Named query 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "GetAllUsers",
      "params": Array [],
      "statement": Object {
        "body": "SELECT * FROM users",
        "loc": Object {
          "a": 29,
          "b": 47,
          "col": 2,
          "line": 3,
        },
      },
      "usedParamSet": Object {},
    },
  ],
}
`;

exports[`Named query selects some fields 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "GetAllUsers",
      "params": Array [],
      "statement": Object {
        "body": "SELECT id, name FROM users",
        "loc": Object {
          "a": 29,
          "b": 54,
          "col": 2,
          "line": 3,
        },
      },
      "usedParamSet": Object {},
    },
  ],
}
`;

exports[`Named query with a valid param 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "CreateCustomer",
      "params": Array [
        Object {
          "codeRefs": Object {
            "defined": Object {
              "a": 42,
              "b": 50,
              "col": 11,
              "line": 4,
            },
            "used": Array [
              Object {
                "a": 170,
                "b": 178,
                "col": 10,
                "line": 7,
              },
            ],
          },
          "name": "customers",
          "transform": Object {
            "keys": Array [
              "customerName",
              "contactName",
              "address",
            ],
            "type": "pick_tuple",
          },
        },
      ],
      "statement": Object {
        "body": "INSERT INTO customers (customer_name, contact_name, address)
  VALUES :customers",
        "loc": Object {
          "a": 99,
          "b": 178,
          "col": 2,
          "line": 6,
        },
      },
      "usedParamSet": Object {
        "customers": true,
      },
    },
  ],
}
`;

exports[`Named query with an inferred param 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "GetUserById",
      "params": Array [
        Object {
          "codeRefs": Object {
            "used": Array [
              Object {
                "a": 65,
                "b": 70,
                "col": 38,
                "line": 3,
              },
            ],
          },
          "name": "userId",
          "transform": Object {
            "type": "scalar",
          },
        },
      ],
      "statement": Object {
        "body": "SELECT * FROM users WHERE userId = :userId",
        "loc": Object {
          "a": 29,
          "b": 70,
          "col": 2,
          "line": 3,
        },
      },
      "usedParamSet": Object {
        "userId": true,
      },
    },
  ],
}
`;

exports[`Named query with pick param used twice 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "CreateCustomer",
      "params": Array [
        Object {
          "codeRefs": Object {
            "defined": Object {
              "a": 42,
              "b": 50,
              "col": 11,
              "line": 4,
            },
            "used": Array [
              Object {
                "a": 170,
                "b": 178,
                "col": 10,
                "line": 7,
              },
              Object {
                "a": 182,
                "b": 190,
                "col": 22,
                "line": 7,
              },
            ],
          },
          "name": "customers",
          "transform": Object {
            "keys": Array [
              "customerName",
              "contactName",
              "address",
            ],
            "type": "pick_tuple",
          },
        },
      ],
      "statement": Object {
        "body": "INSERT INTO customers (customer_name, contact_name, address)
  VALUES :customers, :customers",
        "loc": Object {
          "a": 99,
          "b": 190,
          "col": 2,
          "line": 6,
        },
      },
      "usedParamSet": Object {
        "customers": true,
      },
    },
  ],
}
`;

exports[`Named query with two inferred params 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "GetUserById",
      "params": Array [
        Object {
          "codeRefs": Object {
            "used": Array [
              Object {
                "a": 65,
                "b": 70,
                "col": 38,
                "line": 3,
              },
              Object {
                "a": 87,
                "b": 92,
                "col": 60,
                "line": 3,
              },
            ],
          },
          "name": "userId",
          "transform": Object {
            "type": "scalar",
          },
        },
      ],
      "statement": Object {
        "body": "SELECT * FROM users WHERE userId = :userId or parentId = :userId",
        "loc": Object {
          "a": 29,
          "b": 92,
          "col": 2,
          "line": 3,
        },
      },
      "usedParamSet": Object {
        "userId": true,
      },
    },
  ],
}
`;

exports[`Postgres cast operator is correctly parsed 1`] = `
Object {
  "events": Array [],
  "queries": Array [
    Object {
      "name": "GetAllUsers",
      "params": Array [
        Object {
          "codeRefs": Object {
            "used": Array [
              Object {
                "a": 72,
                "b": 75,
                "col": 45,
                "line": 3,
              },
            ],
          },
          "name": "name",
          "transform": Object {
            "type": "scalar",
          },
        },
      ],
      "statement": Object {
        "body": "SELECT u.\\"rank\\" FROM users u where name = :name::text",
        "loc": Object {
          "a": 29,
          "b": 81,
          "col": 2,
          "line": 3,
        },
      },
      "usedParamSet": Object {
        "name": true,
      },
    },
  ],
}
`;

exports[`Unused parameters produce warnings 1`] = `
Object {
  "events": Array [
    Object {
      "location": Object {
        "a": 39,
        "b": 47,
        "col": 11,
        "line": 4,
      },
      "message": Object {
        "text": "Parameter \\"userNames\\" is defined but never used",
        "type": 0,
      },
      "type": 1,
    },
    Object {
      "location": Object {
        "a": 69,
        "b": 73,
        "col": 11,
        "line": 5,
      },
      "message": Object {
        "text": "Parameter \\"users\\" is defined but never used",
        "type": 0,
      },
      "type": 1,
    },
  ],
  "queries": Array [
    Object {
      "name": "GetAllUsers",
      "params": Array [
        Object {
          "codeRefs": Object {
            "defined": Object {
              "a": 39,
              "b": 47,
              "col": 11,
              "line": 4,
            },
            "used": Array [],
          },
          "name": "userNames",
          "transform": Object {
            "type": "array_spread",
          },
        },
        Object {
          "codeRefs": Object {
            "defined": Object {
              "a": 69,
              "b": 73,
              "col": 11,
              "line": 5,
            },
            "used": Array [],
          },
          "name": "users",
          "transform": Object {
            "keys": Array [
              "name",
              "time",
            ],
            "type": "pick_array_spread",
          },
        },
      ],
      "statement": Object {
        "body": "SELECT * FROM users",
        "loc": Object {
          "a": 102,
          "b": 120,
          "col": 2,
          "line": 7,
        },
      },
      "usedParamSet": Object {},
    },
  ],
}
`;
